<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_map"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map_fragment_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/map_fragment_fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_filter_black_48dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="55dp"
            android:rotation="90"
            />

        <LinearLayout
            android:id="@+id/map_fragment_fab_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/map_fragment_fab_menu"
            app:layout_constraintStart_toStartOf="@+id/map_fragment_fab_menu"
            android:visibility="gone"
            >

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/map_fragment_fab_glass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:backgroundTint="@color/colorAccent"
                app:fabCustomSize="45dp"
                app:icon="@drawable/ic_broken_glass"
                android:text="Glass"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/map_fragment_fab_household_waste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:backgroundTint="@color/colorAccent"
                app:fabCustomSize="45dp"
                app:icon="@drawable/ic_household_waste"
                android:text="Household waste"
                />


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/map_fragment_fab_green_waste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:backgroundTint="@color/colorAccent"
                app:fabCustomSize="45dp"
                app:icon="@drawable/ic_leaf"
                android:text="Green waste"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/map_fragment_fab_plastic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:backgroundTint="@color/colorAccent"
                app:fabCustomSize="45dp"
                app:icon="@drawable/ic_plastic_svg"
                android:text="Plastic bin"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/map_fragment_fab_recycling_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:backgroundTint="@color/colorAccent"
                app:fabCustomSize="45dp"
                app:icon="@drawable/ic_recycling_center"
                android:text="Recycling center"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/map_fragment_fab_clean_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:backgroundTint="@color/colorAccent"
                app:fabCustomSize="45dp"
                app:icon="@drawable/ic_clean_event"
                android:text="Clean events"
                />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/map_fragment_fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/map_fragment_fab_container"
            app:layout_constraintEnd_toEndOf="@+id/map_fragment_fab_menu"
            app:layout_constraintStart_toStartOf="@+id/map_fragment_fab_menu"
            app:srcCompat="@drawable/ic_add_black_24"
            android:layout_marginBottom="10dp"
            android:text="Add"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>