<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.fragments.CleanEventFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/clean_event_frag_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_events_fragment_title"
            android:textSize="30sp"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/clean_event_frag_table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clean_event_frag_activity_title"
            android:layout_marginTop="20dp"
            />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/clean_event_frag_viewpager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clean_event_frag_table_layout"
            />

        <ImageButton
            android:id="@+id/clean_event_frag_fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/clean_event_frag_activity_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/clean_event_frag_activity_title"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_add_black_24"
            tools:ignore="ContentDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>